Teams and Sprints restrictions updated